plugins {
    id 'org.springframework.boot' version '2.5.3'
}

apply plugin: 'java'
apply plugin: 'io.spring.dependency-management'
apply plugin: 'war'

archivesBaseName = 'saas-service-discovery'
group = 'com.javaquery'
version = '1.0.0'
sourceCompatibility = '8'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'com.javaquery:util:1.0.6.1'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

test {
    useJUnitPlatform()
}

task copyWar(type: Copy){
    from "build/libs/${archivesBaseName}-${version}.war"
    into "docker/"
}